--- a/vueport-hello-world/package.json
+++ b/vueport-hello-world/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.10.5",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
